# hw11

fast_api/: docker-compose.yml  main.py  pyproject.toml  test.db
fast_api/docs/: conf.py
fast_api/docs/_build/doctrees/: environment.pickle  index.doctree
fast_api/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
fast_api/migrations/: env.py
fast_api/migrations/versions/: 122df04efc66_add_contacts_users.py  15cedf8546f1_add_field_confirmed.py  1a02f80b0cf5_init.py  defa0f34f2e9_init.py  f45e4b885c84_add_users.py
fast_api/postgres-data/: postmaster.pid
fast_api/postgres-data/base/13481/: pg_internal.init
fast_api/postgres-data/base/16384/: 1249  1259  16388  16398  16401  16402  16403  16405  16406  16408  16414  16415  16417  2224  2604  2606  2620  2657  2658  2659  2662  2665  2666  2667  2674  2678  2679  2704  3455  (+2 more)
fast_api/postgres-data/global/: 1262  2671  pg_control  pg_internal.init
fast_api/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
fast_api/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
fast_api/src/: schemas.py
fast_api/src/conf/: config.ini  config.py  messages.py
fast_api/src/database/: db.py  models.py
fast_api/src/repository/: contacts.py  users.py
fast_api/src/routes/: auth.py  contacts.py  users.py
fast_api/src/services/: auth.py  cloud_image.py  emails.py
fast_api/templates/: features.html  index.html
fast_api/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
(+32 files in other folders)
